--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -56,7 +56,7 @@
     "if not os.path.exists('models/slim'):\n",
     "  !git clone https://github.com/tensorflow/models/\n",
     "old_cwd = os.getcwd()\n",
-    "os.chdir('models/slim')\n",
+    "os.chdir('models/research/slim')\n",
     "from nets import inception_v3\n",
     "os.chdir(old_cwd)\n",
     "\n",
